/*
 * Copyright 2019 The Feast Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package feast.specs;

import "feast/specs/ImportSpec.proto";
import "feast/specs/EntitySpec.proto";
import "feast/specs/FeatureSpec.proto";
import "feast/specs/StorageSpec.proto";

option java_package = "feast.specs";
option java_outer_classname = "ImportJobSpecsProto";
option go_package = "github.com/gojek/feast/protos/generated/go/feast/specs";

message ImportJobSpecs {
  string jobId = 1;
  feast.specs.ImportSpec importSpec = 2;
  repeated feast.specs.EntitySpec entitySpecs = 3;
  repeated feast.specs.FeatureSpec featureSpecs = 4;
  StorageSpec servingStorageSpec = 5;
  StorageSpec warehouseStorageSpec = 6;
  StorageSpec errorsStorageSpec = 7;

  // The following four fields below are only valid in Feast 0.1.x
  // and will be backward incompatible for versions greater than 0.1.x
  // ============================================================
  //
  // (optional, default: false)
  // write_feature_metrics_to_influx_db specifies if Feast should write feature metrics
  // (such as lag and value summaries) to an existing Influx DB database. 
  // If set to true, the next three fields must all be set:
  // - influx_db_url
  // - influx_db_database
  // - influx_db_measurement 
  // NOTE:
  // When retrieving the data from Influx DB,
  // - The field name for feature lag value in seconds unit is "lag_in_seconds"
  // - The field name for value is "value"
  // - Points will be tagged with "feature_id" and "entity_name"
  bool write_feature_metrics_to_influx_db = 8;
  // influx_db_url is the URL for Feast to connect to Influx DB server. 
  // For example: http://localhost:8086
  // Feast and the import jobs created by Feast must be able to reach this URL.
  string influx_db_url = 9;
  // influx_db_database is the name of the Influx DB database for the metrics.
  string influx_db_database = 10;
  // influx_db_measurement is the name of measurement that will contain the metrics data.
  // Ref: https://docs.influxdata.com/influxdb/v1.7/concepts/key_concepts/#measurement
  string influx_db_measurement = 11;
}
